src/scss/_header.scss
@use './styles' as *;

header {
  @include flex(row, space-between, center);
  font-family: $font-family;
  width: 100%;

  .ghost {
    width: 229px;
  }

  .city-data {
    @include flex(column, center, center);

    .city-name {
      color: $secondary-color;
      font-size: 40px;
    }

    .current-date {
      color: $accent-color;
      font-size: 25px;
    }
  }

  .mobile-search-trigger {
    display: none;
  }

  form {
    margin: 5px;
    border: 3px solid $secondary-color;
    border-radius: 20px;
    height: auto;
    padding: 8px 14px;

    .search-container {
      @include flex(row, center, center);
      border-bottom: 2px solid $secondary-color;
      margin: 2px 4px;

      svg {
        height: 15px;
      }

      input {
        border: none;
        padding: 0;
        background: none;
        color: $accent-color;
        font-weight: bold;

        &:focus {
          outline: none;
        }
      }

      button {
        background: none;
        border: none;
        cursor: pointer;
      }
    }
  }
}

@media only screen and (max-width: 650px) {
  header {
    @include flex(row, space-between, center);
    .ghost {
      width: 45px;
    }
    .city-data {
      .city-name {
        font-size: 35px;
      }

      .current-date {
        font-size: 20px;
      }
    }

    .mobile-search-trigger {
      display: block;
      cursor: pointer;
      width: 30px;
      height: 30px;
      @include flex(row, center, center);
      margin-right: 15px;
    }

    form.active {
      display: inline;
      animation: showSearch 0.15s ease-in-out;
    }

    form.hide {
      animation: hideSearch 0.15s ease-in-out;
    }

    form {
      display: none;
      z-index: 1;
      width: auto;
      height: auto;
      padding: 7px 10px;
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
      background-color: $main-color;
      box-shadow: 0 0 30px $main-color;
      font-family: $secondary-font;
      padding: 15px;

      .search-container {
        @include flex(column, center, center);
        height: 100%;
        border: none;
        padding: 10px 15px;
        gap: 35px;

        input {
          background-color: $main-color;
          border: none;
          color: $accent-color;
          padding: 5px;
          border-bottom: 2px solid $secondary-color;
          font-family: $secondary-font;
        }

        .search-button::before {
          content: 'SEARCH';
          font-family: $secondary-font;
          font-weight: 600;
        }

        .search-button {
          margin: 0;
          background-color: $secondary-color;
          font-size: 15px;
          padding: 5px 10px;
          border-radius: 10px;
          cursor: pointer;
          svg {
            svg {
              width: 25px;
              height: auto;
              display: none;
            }
          }

          &:hover {
            box-shadow: 0 0 15px 3px rgb(54, 49, 45);
            transition: 0.1s ease-in-out;
          }
        }
      }
    }
  }
}

@keyframes showSearch {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes hideSearch {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}

